--- a/crash-course/src/app.css
+++ b/crash-course/src/app.css
@@ -6,6 +6,18 @@ body{
     @apply bg-gray-100 text-gray-900;
 }
 
+.scroll {
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .scroll::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scroll {
+    overflow: hidden;
+  }
 
 
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
